sec13-assignment-00-assignment-details/assignment-gateway/ReferenceGrant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-gateway
  namespace: default
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: nginx-ingress
  to:
  - group: ""
    kind: Service
