sec13-assignment-00-assignment-details/assignment-gateway/06-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dice-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "job.127.0.0.1.nip.io"
    allowedRoutes:
      namespaces:
        from: All
