sec13-assignment-00-assignment-details/assignment-gateway/06-1-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dice-route
  namespace: default

spec:
  parentRefs:
  - name: dice-gateway
    namespace: nginx-gateway 

  hostnames:
  - "job.127.0.0.1.nip.io"

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /candidate
    backendRefs:
    - name: candidate-service
      port: 8080

  - matches:
    - path:
        type: PathPrefix
        value: /job
    backendRefs:
    - name: job-service
      port: 8080

  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      port: 80
